mostrar info de la obra

--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "name": "Judo Heroes 2",
   "description": "A sample Universal JavaScript application with React and Express",
   "repository": "https://github.com/lmammino/judo-heroes-2",
-  "logo": "https://raw.githubusercontent.com/lmammino/judo-heroes-2/master/src/static/img/logo-judo-heroes.png",
+  "logo": "http://www.cartelera.com.uy/imagenes_salas/163.jpg",
   "keywords": ["node", "express", "react", "universal", "javascript"],
   "env": {
     "PORT": {
